# Rust-Algorithms

./: Cargo.toml
src/: lib.rs  main.rs
src/linear_search/: binary_search_list.rs  linear_search.rs  mod.rs
src/quicksort/: quicksort.rs
src/sort/: bubble_sort.rs
