[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"
authors= ["Flavio Esteves <flavioafesteves@gmail.com>"]

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path="src/main.rs"
name = "algorithms"

[dependencies]
